npm install -D sass-embedded

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/robots": "^5.2.11",
     "@nuxtjs/sitemap": "^7.4.1",
+    "sass-embedded": "^1.89.2",
     "vuetify-nuxt-module": "^0.18.7"
   }
 }
