--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mdi/js": "^7.4.47",
     "nuxt": "^3.17.5",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1"
   },
