--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/robots": "^5.2.11",
     "@nuxtjs/sitemap": "^7.4.1",
+    "@vite-pwa/nuxt": "^1.0.4",
     "sass-embedded": "^1.89.2",
     "vuetify-nuxt-module": "^0.18.7"
   }
