--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "nuxt dev --host 0.0.0.0",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy":"sh deploy.sh",
+    "content":"sh sendContent.sh"
   },
   "dependencies": {
     "@mdi/js": "^7.4.47",
