--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "deploy":"sh deploy.sh",
-    "content":"sh sendContent.sh"
+    "deploy": "sh deploy.sh",
+    "content": "sh sendContent.sh"
   },
   "dependencies": {
     "@mdi/js": "^7.4.47",
+    "animejs": "^4.1.3",
     "nuxt": "^3.17.5",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.16",
